fixed_templates/datadog_checkov_fixed_template.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-datadog-cluster-agent
  namespace: test-ns
  labels:
    helm.sh/chart: datadog-3.31.0
    app.kubernetes.io/name: release-name-datadog
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/version: '7'
spec:
  type: ClusterIP
  selector:
    app: release-name-datadog-cluster-agent
  ports:
  - port: 5005
    name: agentport
    protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-datadog-cluster-agent
  namespace: test-ns
  labels:
    helm.sh/chart: datadog-3.31.0
    app.kubernetes.io/name: release-name-datadog
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/version: '7'
    app.kubernetes.io/component: cluster-agent
  annotations:
    seccomp.security.alpha.kubernetes.io/pod: runtime/default
spec:
  replicas: 1
  revisionHistoryLimit: 10
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  selector:
    matchLabels:
      app: release-name-datadog-cluster-agent
  template:
    metadata:
      labels:
        app.kubernetes.io/name: release-name-datadog
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/component: cluster-agent
        app: release-name-datadog-cluster-agent
      name: release-name-datadog-cluster-agent
      annotations:
        checksum/clusteragent_token: a56cbd91751937f5f5305a4d50ac34efefa86cc44aa34338b7c18a58cddeaee7
        checksum/clusteragent-configmap: ed2ea487c5b74d839946af6aa068f08e0467b8c17070000bf8abde25b0163592
        checksum/api_key: 5fa77f92c1e8e435ca7c49283696ab42bebb65a848f5f6f8db57a6108101c113
        checksum/application_key: 01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546b
        checksum/install_info: b6dcbdf4926476a6ba6a94e21779cdcd250d8b9f5d0ff1675df9f862b40a8e60
    spec:
      serviceAccountName: release-name-datadog-cluster-agent
      automountServiceAccountToken: false
      containers:
      - name: cluster-agent
        image: gcr.io/datadoghq/cluster-agent:7.45.0
        imagePullPolicy: Always
        resources:
          limits:
            memory: 128Mi
            cpu: 250m
          requests:
            memory: 128Mi
            cpu: 250m
        ports:
        - containerPort: 5005
          name: agentport
          protocol: TCP
        - containerPort: 5000
          name: agentmetrics
          protocol: TCP
        livenessProbe:
          failureThreshold: 6
          httpGet:
            path: /live
            port: 5556
            scheme: HTTP
          initialDelaySeconds: 15
          periodSeconds: 15
          successThreshold: 1
          timeoutSeconds: 5
        readinessProbe:
          failureThreshold: 6
          httpGet:
            path: /ready
            port: 5556
            scheme: HTTP
          initialDelaySeconds: 15
          periodSeconds: 15
          successThreshold: 1
          timeoutSeconds: 5
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          capabilities:
            drop:
            - ALL
          runAsUser: 25000
        volumeMounts:
        - name: datadogrun
          mountPath: /opt/datadog-agent/run
          readOnly: false
        - name: varlog
          mountPath: /var/log/datadog
          readOnly: false
        - name: tmpdir
          mountPath: /tmp
          readOnly: false
        - name: installinfo
          subPath: install_info
          mountPath: /etc/datadog-agent/install_info
          readOnly: true
        - name: confd
          mountPath: /conf.d
          readOnly: true
        - name: config
          mountPath: /etc/datadog-agent
        - name: secret-volume
          readOnly: true
          mountPath: /etc/secret-volume
        - name: secret-volume
          readOnly: true
          mountPath: /etc/secret-volume
      volumes:
      - name: datadogrun
        emptyDir: {}
      - name: varlog
        emptyDir: {}
      - name: tmpdir
        emptyDir: {}
      - name: installinfo
        configMap:
          name: release-name-datadog-installinfo
      - name: confd
        configMap:
          name: release-name-datadog-cluster-agent-confd
          items:
          - key: kubernetes_state_core.yaml.default
            path: kubernetes_state_core.yaml.default
      - name: config
        emptyDir: {}
      - name: secret-volume
        secret:
          secretName: my-secret
      - name: secret-volume
        secret:
          secretName: my-secret
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 50
            podAffinityTerm:
              labelSelector:
                matchLabels:
                  app: release-name-datadog-cluster-agent
              topologyKey: kubernetes.io/hostname
      nodeSelector:
        kubernetes.io/os: linux
      securityContext:
        seccompProfile:
          type: RuntimeDefault
        runAsUser: 25000
        runAsNonRoot: true
        runAsGroup: 25000
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
spec:
  podSelector: {}
  ingress:
  - {}
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
  namespace: test-ns
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - ipBlock:
        cidr: 172.17.0.0/16
        except:
        - 172.17.1.0/24
    - namespaceSelector:
        matchLabels:
          project: myproject
    - podSelector:
        matchLabels:
          role: frontend
    ports:
    - protocol: TCP
      port: 6379
  egress:
  - to:
    - ipBlock:
        cidr: 10.0.0.0/24
    ports:
    - protocol: TCP
      port: 5978
